--- a/e-commerce-parent/pom.xml
+++ b/e-commerce-parent/pom.xml
@@ -2,29 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>sc-practice</artifactId>
+        <groupId>com.wyj.apps.sc</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wyj.apps.sc</groupId>
-    <artifactId>sc-practice</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>e-commerce-parent</artifactId>
 
-    <developers>
-        <developer>
-            <id>JUGG</id>
-            <name>JUGG</name>
-            <email>13693653307@163.com</email>
-        </developer>
-    </developers>
-
-    <modules>
-        <module>sc-servers</module>
-        <module>commons</module>
-        <module>e-commerce-parent</module>
-    </modules>
-
-
-    <!--每个项目上 都加上-->
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -32,6 +18,5 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
-
 
 </project>
