--- a/commons/common-utils/pom.xml
+++ b/commons/common-utils/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>common-utils</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
