--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -28,6 +28,7 @@
         <tk-mapper.version>3.4.0</tk-mapper.version>
         <mybatis.version>3.4.6</mybatis.version>
         <google-guava.version>28.0-jre</google-guava.version>
+        <slf4j.log.version>1.7.30</slf4j.log.version>
 
         <common.version>1.0-SNAPSHOT</common.version>
     </properties>
@@ -46,6 +47,11 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
 
@@ -98,6 +104,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${google-guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.log.version}</version>
             </dependency>
 
 
