--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -116,4 +116,17 @@
         </dependencies>
     </dependencyManagement>
 
+    <!-- 解决运行时 别人饮用common 找不到的问题 -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
