--- a/sc-servers/sc-servers-configuration/pom.xml
+++ b/sc-servers/sc-servers-configuration/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>sc-servers-configuration</artifactId>
 
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <exclusions>
+            <exclusion>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-logging</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
 
 </project>
