--- a/sc-servers/sc-servers-discovery/pom.xml
+++ b/sc-servers/sc-servers-discovery/pom.xml
@@ -10,9 +10,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sc-servers-discovery</artifactId>
-
+    <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
